# test_task_jun

./: CMakeLists.txt  README.md  inlet.in  main.cpp  my_list.cpp  my_list.hpp  test_serialization.cpp
